--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-
+<html>
+    <head>
+        <title>Code Wheel</title>
+        <script src='Winwheel.js'></script>
+    </head>
+    <body>
+        <canvas id='canvas' width='880' height='300'>
+            Canvas not supported, use another browser.
+        </canvas>
+        <script>
+            var theWheel = new Winwheel({
+                'numSegments'  : 8,         // Number of segments
+                'outerRadius'  : 212,       // The size of the wheel.
+                'centerX'      : 217,       // Used to position on the background correctly.
+                'centerY'      : 219,
+                'textFontSize' : 28,        // Font size.
+                'segments'     :            // Definition of all the segments.
+                [
+                   {'fillStyle' : '#eae56f', 'text' : 'Prize 1'},
+                   {'fillStyle' : '#89f26e', 'text' : 'Prize 2'},
+                   {'fillStyle' : '#7de6ef', 'text' : 'Prize 3'},
+                   {'fillStyle' : '#e7706f', 'text' : 'Prize 4'},
+                   {'fillStyle' : '#eae56f', 'text' : 'Prize 5'},
+                   {'fillStyle' : '#89f26e', 'text' : 'Prize 6'},
+                   {'fillStyle' : '#7de6ef', 'text' : 'Prize 7'},
+                   {'fillStyle' : '#e7706f', 'text' : 'Prize 8'}
+                ],
+                'animation' :               // Definition of the animation
+                {
+                    'type'     : 'spinToStop',
+                    'duration' : 5,
+                    'spins'    : 8,
+                    'callbackFinished' : 'alertPrize()'
+                }
+            });
+ 
+            // Called when the animation has finished.
+            function alertPrize()
+            {
+                // Get the segment indicated by the pointer on the wheel background which is at 0 degrees.
+                var winningSegment = theWheel.getIndicatedSegment();
+ 
+                // Do basic alert of the segment text.
+                alert("You have won " + winningSegment.text);
+            }
+        </script>
+    </body>
+</html>
