--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
-                   {'fillStyle' : '#eae56f', 'text' : 'Prize 1'},
-                   {'fillStyle' : '#89f26e', 'text' : 'Prize 2'},
-                   {'fillStyle' : '#7de6ef', 'text' : 'Prize 3'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Prize 4'},
-                   {'fillStyle' : '#eae56f', 'text' : 'Prize 5'},
-                   {'fillStyle' : '#89f26e', 'text' : 'Prize 6'},
-                   {'fillStyle' : '#7de6ef', 'text' : 'Prize 7'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Prize 8'}
+                   {'fillStyle' : '#eae56f', 'text' : "Manager's Choice!!!"},
+                   {'fillStyle' : '#89f26e', 'text' : 'Jeans Day'},
+                   {'fillStyle' : '#7de6ef', 'text' : 'Leave Early'},
+                   {'fillStyle' : '#e7706f', 'text' : '5 minutes in the sandbox'},
+                   {'fillStyle' : '#eae56f', 'text' : 'High-Five Points'},
+                   {'fillStyle' : '#89f26e', 'text' : 'Valet Service from the Intern'},
+                   {'fillStyle' : '#7de6ef', 'text' : '20 Minute Nap in Conference Room'},
+                   {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
