--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
     </head>
     <body>
         <div align="center">
-            <h1>Winwheel.js example wheel - basic code wheel</h1>
-            <p>Here is an example of a basic code drawn wheel which spins to a stop with the prize won alerted to the user.</p>
-            <br />
-            <p>Choose a power setting then press the Spin button. You will be alerted to the prize won when the spinning stops.</p>
-            <br />
             <table cellpadding="0" cellspacing="0" border="0">
             <tr>
                 <td>
@@ -71,7 +66,7 @@
             // Create new wheel object specifying the parameters at creation time.
             var theWheel = new Winwheel({
                 'numSegments'  : 8,     // Specify number of segments.
-                'outerRadius'  : 212,   // Set outer radius so wheel fits inside the background.
+                //'outerRadius'  : 212,   // Set outer radius so wheel fits inside the background.
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
