--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </head>
     <body>
         <div align="center">
-        <button id="spin_button" type="button" onClick="startSpin();" >Spin</button
+            <button id="spin_button" type="button" onClick="startSpin();" >Spin</button>
         <br /><br />
         &nbsp;&nbsp;<a href="#" onClick="resetWheel(); return false;">Play Again</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(reset)
 
