--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                    {'fillStyle' : '#e7706f', 'text' : '5 minutes in the sandbox'},
                    {'fillStyle' : '#eae56f', 'text' : 'High-Five Points'},
                    {'fillStyle' : '#89f26e', 'text' : 'Valet Service from the Intern'},
-                   {'fillStyle' : '#7de6ef', 'text' : '20 Minute Nap in Conference Room'},
+                   {'fillStyle' : '#7de6ef', 'text' : '20 Minute Nap'},
                    {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'}
                 ],
                 'animation' :           // Specify the animation to use.
