--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <button id="spin_button" type="button" onClick="startSpin();" >Spin</button>
         
-        <div style="{text-align: center}">&#9660;</div>
+        <div style="text-align:center">&#9660;</div>
 
         <canvas id="canvas" width="800" height="800">
             <p style="{color: white}" align="center">Sorry, your browser doesn't support canvas. Please try another.</p>
