--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 -->
 <html>
     <head>
-        <title>HTML5 Canvas Winning Wheel</title>
+        <title>Prize Wheel</title>
         <link rel="stylesheet" href="main.css" type="text/css" />
         <script type="text/javascript" src="TweenMax.min.js"></script>
         <script type="text/javascript" src="Winwheel.js"></script>   
