--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <script type="text/javascript" src="Winwheel.js"></script>   
     </head>
     <body>
-
-        <button id="spin_button" type="button" onClick="startSpin();" >Spin</button>
+        <div style="text-align:center;width:800px">
+            <button style="width:250px" id="spin_button" type="button" onClick="startSpin();" >Spin</button>
+        </div>
         
-        <div style="text-align:center">&#9660;</div>
+        <div style="text-align:center;width:800px">&#9660;</div>
 
         <canvas id="canvas" width="800" height="800">
             <p style="{color: white}" align="center">Sorry, your browser doesn't support canvas. Please try another.</p>
