--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
-                   {'fillStyle' : '#eae56f', 'text' : "Manager's Choice!!!"},
+                   {'fillStyle' : '#eae56f', 'text' : "Manager's Choice"},
                    {'fillStyle' : '#89f26e', 'text' : 'Jeans Day'},
                    {'fillStyle' : '#7de6ef', 'text' : 'Leave Early'},
-                   {'fillStyle' : '#e7706f', 'text' : '5 minutes in the sandbox'},
+                   {'fillStyle' : '#e7706f', 'text' : 'Leave Now!!!'},
                    {'fillStyle' : '#eae56f', 'text' : 'High-Five Points'},
                    {'fillStyle' : '#89f26e', 'text' : 'Intern Valet Service'},
-                   {'fillStyle' : '#7de6ef', 'text' : '20 Minute Nap'},
+                   {'fillStyle' : '#7de6ef', 'text' : '30 Minute Nap'},
                    {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'}
                 ],
                 'animation' :           // Specify the animation to use.
