--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 'segments'     :        // Define segments including colour and text.
                 [
                    {'fillStyle' : '#eae56f',
-                    'size' : winwheelPercentToDegrees(5)
+                    'size' : 50
                     'text' : "Manager's Choice"},
                    {'fillStyle' : '#89f26e', 'text' : 'Jeans Day'},
                    {'fillStyle' : '#7de6ef', 'text' : 'Leave at 2'},
