--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
-                   {'fillStyle' : '#eae56f',
-                    'size' : 50
-                    'text' : "Manager's Choice"},
+                   {'fillStyle' : '#eae56f', 'text' : "Manager's Choice"},
                    {'fillStyle' : '#89f26e', 'text' : 'Jeans Day'},
                    {'fillStyle' : '#7de6ef', 'text' : 'Leave at 2'},
                    {'fillStyle' : '#e7706f', 'text' : 'Leave Now!!!'},
