--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             // Create new wheel object specifying the parameters at creation time.
             var theWheel = new Winwheel({
                 'numSegments'  : 9,     // Specify number of segments.
-                //'outerRadius'  : 212,   // Set outer radius so wheel fits inside the background.
+                'outerRadius'  : 212,   // Set outer radius so wheel fits inside the background.
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
