--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
                 [
                    {'fillStyle' : '#eae56f', 'text' : "Manager's Choice"},
                    {'fillStyle' : '#89f26e', 'text' : 'Jeans Day'},
-                   {'fillStyle' : '#7de6ef', 'text' : 'Leave at 2'},
+                   {'fillStyle' : '#7de6ef', 'text' : 'Leave Early'},
                    {'fillStyle' : '#e7706f', 'text' : 'Leave Now!!!'},
                    {'fillStyle' : '#eae56f', 'text' : 'High-Five Points'},
                    {'fillStyle' : '#89f26e', 'text' : 'Intern Valet Service'},
                    {'fillStyle' : '#7de6ef', 'text' : '30 Minute Nap'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Jeff Goes to Utah'}
+                   {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
