--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                    {'fillStyle' : '#eae56f', 'text' : 'High-Five Points'},
                    {'fillStyle' : '#89f26e', 'text' : 'Intern Valet Service'},
                    {'fillStyle' : '#7de6ef', 'text' : '30 Minute Nap'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'}
+                   {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'},
                 ],
                 'animation' :           // Specify the animation to use.
                 {
