--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
-                   {'fillStyle' : '#eae56f', 'text' : "Manager's Choice!!!"},
-                   {'fillStyle' : '#89f26e', 'text' : 'Jeans Day'},
-                   {'fillStyle' : '#7de6ef', 'text' : 'Leave Early'},
-                   {'fillStyle' : '#e7706f', 'text' : '5 minutes in the sandbox'},
-                   {'fillStyle' : '#eae56f', 'text' : 'High-Five Points'},
-                   {'fillStyle' : '#89f26e', 'text' : 'Intern Valet Service'},
-                   {'fillStyle' : '#7de6ef', 'text' : '20 Minute Nap'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Treat from the Market'}
+                   {'fillStyle' : 'Green', 'text' : "Team Snack - Morning"},
+                   {'fillStyle' : '#89f26e', 'text' : 'Arrive 2 Hours Late'},
+                   {'fillStyle' : '#7de6ef', 'text' : 'Coffee with Nick'},
+                   {'fillStyle' : '#e7706f', 'text' : 'Snack from Market'},
+                   {'fillStyle' : '#eae56f', 'text' : 'Lunch from Anywhere'},
+                   {'fillStyle' : '#89f26e', 'text' : 'Team Lunch Out'},
+                   {'fillStyle' : '#7de6ef', 'text' : 'Jeans Day'},
+                   {'fillStyle' : '#e7706f', 'text' : 'Spin Again'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
