--- a/index.html
+++ b/index.html
@@ -45,19 +45,28 @@
         <script>
             // Create new wheel object specifying the parameters at creation time.
             var theWheel = new Winwheel({
-                'numSegments'  : 8,     // Specify number of segments.
+                'numSegments'  : 16,     // Specify number of segments.
                 //'outerRadius'  : 212,   // Set outer radius so wheel fits inside the background.
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
                    {'fillStyle' : 'Green', 'text' : "Team Snack - Morning"},
-                   {'fillStyle' : '#89f26e', 'text' : 'Arrive 2 Hours Late'},
-                   {'fillStyle' : '#7de6ef', 'text' : 'Coffee with Nick'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Snack from Market'},
-                   {'fillStyle' : '#eae56f', 'text' : 'Lunch from Anywhere'},
-                   {'fillStyle' : '#89f26e', 'text' : 'Team Lunch Out'},
-                   {'fillStyle' : '#7de6ef', 'text' : 'Jeans Day'},
-                   {'fillStyle' : '#e7706f', 'text' : 'Spin Again'}
+                   {'fillStyle' : 'Yellow', 'text' : 'Arrive 2 Hours Late'},
+                   {'fillStyle' : 'Red', 'text' : 'Coffee with Nick'},
+                   {'fillStyle' : 'Blue', 'text' : 'Snack from Market'},
+                   {'fillStyle' : 'Orange', 'text' : 'Lunch from Anywhere'},
+                   {'fillStyle' : 'White', 'text' : 'Team Lunch Out'},
+                   {'fillStyle' : 'Pink', 'text' : 'Jeans Day'},
+                   {'fillStyle' : 'Purple', 'text' : 'Spin Again'},
+                    
+                   {'fillStyle' : 'Green', 'text' : "Team Snack - Afternoon"},
+                   {'fillStyle' : 'Yellow', 'text' : 'Leave 2 Hours Early'},
+                   {'fillStyle' : 'Red', 'text' : 'Coffee with Megan'},
+                   {'fillStyle' : 'Blue', 'text' : 'Intern Valet Service'},
+                   {'fillStyle' : 'Orange', 'text' : 'High-Five Points'},
+                   {'fillStyle' : 'White', 'text' : '2 Hour Lunch'},
+                   {'fillStyle' : 'Pink', 'text' : 'Hat Day'},
+                   {'fillStyle' : 'Purple', 'text' : 'Spin Again'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
