--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
                 'segments'     :        // Define segments including colour and text.
                 [
                    {'fillStyle' : 'Green', 'text' : "Team Snack - Morning"},
-                   {'fillStyle' : 'Yellow', 'text' : 'Arrive 2 Hours Late'},
-                   {'fillStyle' : 'Red', 'text' : 'Coffee with Nick'},
-                   {'fillStyle' : 'Blue', 'text' : 'Snack from Market'},
-                   {'fillStyle' : 'Orange', 'text' : 'Lunch from Anywhere'},
-                   {'fillStyle' : 'White', 'text' : 'Team Lunch Out'},
-                   {'fillStyle' : 'Pink', 'text' : 'Jeans Day'},
-                   {'fillStyle' : 'Purple', 'text' : 'Spin Again'},
+                   {'fillStyle' : 'Blue', 'text' : 'Arrive 2 Hours Late'},
+                   {'fillStyle' : 'White', 'text' : 'Coffee with Nick'},
+                   {'fillStyle' : 'Orange', 'text' : 'Snack from Market'},
+                   {'fillStyle' : 'Green', 'text' : 'Lunch from Anywhere'},
+                   {'fillStyle' : 'Blue', 'text' : 'Team Lunch Out'},
+                   {'fillStyle' : 'White', 'text' : 'Jeans Day'},
+                   {'fillStyle' : 'Orange', 'text' : 'Spin Again'},
                     
                    {'fillStyle' : 'Green', 'text' : "Team Snack - Afternoon"},
-                   {'fillStyle' : 'Yellow', 'text' : 'Leave 2 Hours Early'},
-                   {'fillStyle' : 'Red', 'text' : 'Coffee with Megan'},
-                   {'fillStyle' : 'Blue', 'text' : 'Intern Valet Service'},
-                   {'fillStyle' : 'Orange', 'text' : 'High-Five Points'},
-                   {'fillStyle' : 'White', 'text' : '2 Hour Lunch'},
-                   {'fillStyle' : 'Pink', 'text' : 'Hat Day'},
-                   {'fillStyle' : 'Purple', 'text' : 'Spin Again'}
+                   {'fillStyle' : 'Blue', 'text' : 'Leave 2 Hours Early'},
+                   {'fillStyle' : 'White', 'text' : 'Coffee with Megan'},
+                   {'fillStyle' : 'Orange', 'text' : 'Intern Valet Service'},
+                   {'fillStyle' : 'Green', 'text' : 'High-Five Points'},
+                   {'fillStyle' : 'Blue', 'text' : '2 Hour Lunch'},
+                   {'fillStyle' : 'White', 'text' : 'Hat Day'},
+                   {'fillStyle' : 'Orange', 'text' : 'Spin Again'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
