--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                    {'fillStyle' : 'Blue', 'text' : 'Arrive 2 Hours Late'},
                    {'fillStyle' : 'White', 'text' : 'Coffee with Nick'},
                    {'fillStyle' : 'Orange', 'text' : 'Snack from Market'},
-                   {'fillStyle' : 'Green', 'text' : 'Lunch from Anywhere'},
-                   {'fillStyle' : 'Blue', 'text' : 'Team Lunch Out'},
-                   {'fillStyle' : 'White', 'text' : 'Jeans Day'},
-                   {'fillStyle' : 'Orange', 'text' : 'Spin Again'},
+                   {'fillStyle' : 'Light Green', 'text' : 'Lunch from Anywhere'},
+                   {'fillStyle' : 'Light Blue', 'text' : 'Team Lunch Out'},
+                   {'fillStyle' : 'Gray', 'text' : 'Jeans Day'},
+                   {'fillStyle' : 'Light Orange', 'text' : 'Spin Again'},
                     
                    {'fillStyle' : 'Green', 'text' : "Team Snack - Afternoon"},
                    {'fillStyle' : 'Blue', 'text' : 'Leave 2 Hours Early'},
                    {'fillStyle' : 'White', 'text' : 'Coffee with Megan'},
                    {'fillStyle' : 'Orange', 'text' : 'Intern Valet Service'},
-                   {'fillStyle' : 'Green', 'text' : 'High-Five Points'},
-                   {'fillStyle' : 'Blue', 'text' : '2 Hour Lunch'},
-                   {'fillStyle' : 'White', 'text' : 'Hat Day'},
-                   {'fillStyle' : 'Orange', 'text' : 'Spin Again'}
+                   {'fillStyle' : 'Light Green', 'text' : 'High-Five Points'},
+                   {'fillStyle' : 'Light Blue', 'text' : '2 Hour Lunch'},
+                   {'fillStyle' : 'Gray', 'text' : 'Hat Day'},
+                   {'fillStyle' : 'Light Orange', 'text' : 'Spin Again'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
