--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
-                   {'fillStyle' : 'Green', 'text' : "Team Snack - Morning"},
-                   {'fillStyle' : 'Blue', 'text' : 'Arrive 2 Hours Late'},
-                   {'fillStyle' : 'White', 'text' : 'Coffee with Nick'},
-                   {'fillStyle' : 'Orange', 'text' : 'Snack from Market'},
-                   {'fillStyle' : 'Light Green', 'text' : 'Lunch from Anywhere'},
-                   {'fillStyle' : 'Light Blue', 'text' : 'Team Lunch Out'},
-                   {'fillStyle' : 'Gray', 'text' : 'Jeans Day'},
-                   {'fillStyle' : 'Light Orange', 'text' : 'Spin Again'},
+                   {'fillStyle' : '#00539f', 'text' : "Team Snack - Morning"},
+                   {'fillStyle' : '#77b800', 'text' : 'Arrive 2 Hours Late'},
+                   {'fillStyle' : '#8e9697', 'text' : 'Coffee with Nick'},
+                   {'fillStyle' : 'White', 'text' : 'Snack from Market'},
+                   {'fillStyle' : '#fe6410', 'text' : 'Lunch from Anywhere'},
+                   {'fillStyle' : '#004631', 'text' : 'Team Lunch Out'},
+                   {'fillStyle' : '#5f6a72', 'text' : 'Jeans Day'},
+                   {'fillStyle' : 'White', 'text' : 'Spin Again'},
                     
-                   {'fillStyle' : 'Green', 'text' : "Team Snack - Afternoon"},
-                   {'fillStyle' : 'Blue', 'text' : 'Leave 2 Hours Early'},
-                   {'fillStyle' : 'White', 'text' : 'Coffee with Megan'},
-                   {'fillStyle' : 'Orange', 'text' : 'Intern Valet Service'},
-                   {'fillStyle' : 'Light Green', 'text' : 'High-Five Points'},
-                   {'fillStyle' : 'Light Blue', 'text' : '2 Hour Lunch'},
-                   {'fillStyle' : 'Gray', 'text' : 'Hat Day'},
-                   {'fillStyle' : 'Light Orange', 'text' : 'Spin Again'}
+                   {'fillStyle' : '#00539f', 'text' : "Team Snack - Afternoon"},
+                   {'fillStyle' : '#77b800', 'text' : 'Leave 2 Hours Early'},
+                   {'fillStyle' : '#8e9697', 'text' : 'Coffee with Megan'},
+                   {'fillStyle' : 'White', 'text' : 'Intern Valet Service'},
+                   {'fillStyle' : '#fe6410', 'text' : 'High-Five Points'},
+                   {'fillStyle' : '#004631', 'text' : '2 Hour Lunch'},
+                   {'fillStyle' : '#5f6a72', 'text' : 'Hat Day'},
+                   {'fillStyle' : 'White', 'text' : 'Spin Again'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
