--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                 'segments'     :        // Define segments including colour and text.
                 [
                    {'fillStyle' : '#00539f', 'text' : "Team Snack - Morning"},
-                   {'fillStyle' : '#77b800', 'text' : 'Arrive 2 Hours Late'},
-                   {'fillStyle' : '#8e9697', 'text' : 'Coffee with Nick'},
+                   {'fillStyle' : '#8e9697', 'text' : 'Arrive 2 Hours Late'},
+                   {'fillStyle' : '#77b800', 'text' : 'Coffee with Nick'},
                    {'fillStyle' : 'White', 'text' : 'Snack from Market'},
                    {'fillStyle' : '#fe6410', 'text' : 'Lunch from Anywhere'},
-                   {'fillStyle' : '#004631', 'text' : 'Team Lunch Out'},
-                   {'fillStyle' : '#5f6a72', 'text' : 'Jeans Day'},
+                   {'fillStyle' : '#5f6a72', 'text' : 'Team Lunch Out'},
+                   {'fillStyle' : '#004631', 'text' : 'Jeans Day/NHA T-Shirt'},
                    {'fillStyle' : 'White', 'text' : 'Spin Again'},
                     
                    {'fillStyle' : '#00539f', 'text' : "Team Snack - Afternoon"},
-                   {'fillStyle' : '#77b800', 'text' : 'Leave 2 Hours Early'},
-                   {'fillStyle' : '#8e9697', 'text' : 'Coffee with Megan'},
+                   {'fillStyle' : '#8e9697', 'text' : 'Leave 2 Hours Early'},
+                   {'fillStyle' : '#77b800', 'text' : 'Coffee with Megan'},
                    {'fillStyle' : 'White', 'text' : 'Intern Valet Service'},
                    {'fillStyle' : '#fe6410', 'text' : 'High-Five Points'},
-                   {'fillStyle' : '#004631', 'text' : '2 Hour Lunch'},
-                   {'fillStyle' : '#5f6a72', 'text' : 'Hat Day'},
+                   {'fillStyle' : '#5f6a72', 'text' : '2 Hour Lunch'},
+                   {'fillStyle' : '#004631', 'text' : 'Hat Day/Sandals'},
                    {'fillStyle' : 'White', 'text' : 'Spin Again'}
                 ],
                 'animation' :           // Specify the animation to use.
