--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                 'segments'     :        // Define segments including colour and text.
                 [
                    {'fillStyle' : '#00539f', 'text' : "Team Snack - Morning"},
-                   {'fillStyle' : '#White', 'text' : 'Arrive 2 Hours Late'},
+                   {'fillStyle' : 'White', 'text' : 'Arrive 2 Hours Late'},
                    {'fillStyle' : '#77b800', 'text' : 'Coffee with Nick'},
                    {'fillStyle' : 'White', 'text' : 'Snack from Market'},
                    {'fillStyle' : '#fe6410', 'text' : 'Lunch from Anywhere'},
-                   {'fillStyle' : '#White', 'text' : 'Team Lunch Out'},
+                   {'fillStyle' : 'White', 'text' : 'Team Lunch Out'},
                    {'fillStyle' : 'Green', 'text' : 'Jeans Day/NHA T-Shirt'},
                    {'fillStyle' : 'White', 'text' : 'Spin Again'},
                     
                    {'fillStyle' : '#00539f', 'text' : "Team Snack - Afternoon"},
-                   {'fillStyle' : '#White', 'text' : 'Leave 2 Hours Early'},
+                   {'fillStyle' : 'White', 'text' : 'Leave 2 Hours Early'},
                    {'fillStyle' : '#77b800', 'text' : 'Coffee with Megan'},
                    {'fillStyle' : 'White', 'text' : 'Intern Valet Service'},
                    {'fillStyle' : '#fe6410', 'text' : 'High-Five Points'},
