--- a/index.html
+++ b/index.html
@@ -45,28 +45,20 @@
         <script>
             // Create new wheel object specifying the parameters at creation time.
             var theWheel = new Winwheel({
-                'numSegments'  : 16,     // Specify number of segments.
+                'numSegments'  : 8,     // Specify number of segments.
                 //'outerRadius'  : 212,   // Set outer radius so wheel fits inside the background.
                 'textFontSize' : 28,    // Set font size as desired.
                 'segments'     :        // Define segments including colour and text.
                 [
-                   {'fillStyle' : '#00539f', 'text' : "Team Snack - Morning"},
+                   {'fillStyle' : '#00539f', 'text' : "Team Snack"},
                    {'fillStyle' : 'White', 'text' : 'Arrive 2 Hours Late'},
                    {'fillStyle' : '#77b800', 'text' : 'Coffee with Nick'},
                    {'fillStyle' : 'White', 'text' : 'Snack from Market'},
                    {'fillStyle' : '#fe6410', 'text' : 'Lunch from Anywhere'},
                    {'fillStyle' : 'White', 'text' : 'Team Lunch Out'},
-                   {'fillStyle' : 'Green', 'text' : 'Jeans Day/NHA T-Shirt'},
-                   {'fillStyle' : 'White', 'text' : 'Spin Again'},
+                   {'fillStyle' : 'Green', 'text' : 'Leave 2 Hours Early'},
+                   {'fillStyle' : 'White', 'text' : 'High Five Points'},
                     
-                   {'fillStyle' : '#00539f', 'text' : "Team Snack - Afternoon"},
-                   {'fillStyle' : 'White', 'text' : 'Leave 2 Hours Early'},
-                   {'fillStyle' : '#77b800', 'text' : 'Coffee with Megan'},
-                   {'fillStyle' : 'White', 'text' : 'Intern Valet Service'},
-                   {'fillStyle' : '#fe6410', 'text' : 'High-Five Points'},
-                   {'fillStyle' : 'White', 'text' : '2 Hour Lunch'},
-                   {'fillStyle' : 'Green', 'text' : 'Hat Day/Sandals'},
-                   {'fillStyle' : 'White', 'text' : 'Spin Again'}
                 ],
                 'animation' :           // Specify the animation to use.
                 {
